--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 osx_image: xcode611
 language: objective-c
-xcode_project: NibDesignableDemo/NibDesignableDemo.xcodeproj
 script:
-  - xctool -scheme NibDesignableDemo
-  - xctool test -scheme NibDesignableDemo -sdk iphonesimulator
+  - xctool -project NibDesignableDemo/NibDesignableDemo.xcodeproj -scheme NibDesignableDemo
+  - xctool -project NibDesignableDemo/NibDesignableDemo.xcodeproj test -scheme NibDesignableDemo -sdk iphonesimulator
