--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ language: objective-c
 script:
   - xctool -project NibDesignableDemo/NibDesignableDemo.xcodeproj -scheme NibDesignableDemo -sdk iphonesimulator
   - xctool -project NibDesignableDemo/NibDesignableDemo.xcodeproj test -scheme NibDesignableDemo -sdk iphonesimulator
+before_install:
+  - brew update
+  - brew uninstall xctool && brew install --HEAD xctool
