--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
-osx_image: xcode7
+osx_image: xcode7.3
 language: objective-c
 script:
   - xctool -project NibDesignableDemo/NibDesignableDemo.xcodeproj -scheme NibDesignableDemo -sdk iphonesimulator
   - xctool -project NibDesignableDemo/NibDesignableDemo.xcodeproj test -scheme NibDesignableDemo -sdk iphonesimulator
+  - swiftlint lint --strict
 before_install:
   - brew update
   - brew uninstall xctool && brew install --HEAD xctool
+  - brew install swiftlint
